# wpe-webkit-rs

./: .projections.json  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/wpe/: Cargo.toml
crates/wpe-sys/: Cargo.toml  build.rs  wrapper.h
crates/wpe-sys/src/: lib.rs
crates/wpe/examples/: basic.rs  native.rs
crates/wpe/src/: error.rs  input.rs  ipc.rs  lib.rs  native.rs  renderer.rs  webview.rs  window.rs  x11_window.rs
crates/wpe/src/shaders/: fullscreen_quad.wgsl
