[workspace]
resolver = "2"
members = [
    "crates/wpe-sys",
    "crates/wpe",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["monokrome <monokrome@monokro.me>"]
license = "MIT"
repository = "https://github.com/monokrome/wpe-webkit-rs"

[workspace.dependencies]
# Sys crate
wpe-sys = { path = "crates/wpe-sys" }

# Windowing
winit = "0.30"
raw-window-handle = "0.6"
softbuffer = "0.4"

# GPU rendering
wgpu = "28"
bytemuck = { version = "1", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization (for IPC)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Menus
muda = "0.16"

# X11 support
x11rb = { version = "0.13", features = ["shm"] }
libc = "0.2"

# Dev dependencies
tracing-subscriber = "0.3"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
