[package]
name = "wpe-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Raw FFI bindings to libwpe and WPE WebKit"
links = "wpe"
build = "build.rs"

[build-dependencies]
bindgen = "0.71"
pkg-config = "0.3"

[lints]
workspace = true
