[package]
name = "wpe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe Rust bindings for WPE WebKit - GTK-free embedded web views"

[features]
default = ["winit"]
winit = ["dep:winit", "dep:raw-window-handle", "dep:softbuffer"]
gpu = ["winit", "dep:wgpu", "dep:bytemuck"]
x11 = ["dep:x11rb", "dep:libc"]

[dependencies]
wpe-sys.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

# Optional winit integration
winit = { workspace = true, optional = true }
raw-window-handle = { workspace = true, optional = true }
softbuffer = { workspace = true, optional = true }

# Optional GPU rendering
wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }

# Optional X11 fallback
x11rb = { workspace = true, optional = true }
libc = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
tracing-subscriber.workspace = true

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "native"
path = "examples/native.rs"
required-features = []

[lints]
workspace = true
